--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "pixi-viewport": "^5.0.2",
     "pixi.js": "^7.4.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
